--- a/templates/event_manage.html
+++ b/templates/event_manage.html
@@ -11,10 +11,11 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/event_manage/">Guest Manage System</a>
+                    <a class="navbar-brand" href="/project_manage/">AutoTest Engine System</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
+                        <li><a href="/project_manage/">项目管理</a></li>
                         <li class="active"><a href="#">发布会</a></li>
                         <li><a href="/guest_manage/">嘉宾</a></li>
                     </ul>
