--- a/templates/guest_manage.html
+++ b/templates/guest_manage.html
@@ -16,6 +16,7 @@
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="/project_manage/">项目管理</a></li>
+                        <li><a href="/interface_manage/">接口管理</a></li>
                         <li><a href="/event_manage/">发布会</a></li>
                         <li class="active"><a href="#">嘉宾</a></li>
                     </ul>
