--- a/templates/interface_manage.html
+++ b/templates/interface_manage.html
@@ -15,8 +15,8 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">项目管理</a></li>
-                        <li><a href="/interface_manage/">接口管理</a></li>
+                        <li><a href="/project_manage/">项目管理</a></li>
+                        <li class="active"><a href="#">接口管理</a></li>
                         <li><a href="/event_manage/">发布会</a></li>
                         <li><a href="/guest_manage/">嘉宾</a></li>
                     </ul>
@@ -28,19 +28,19 @@
             </div>
         </nav>
 
-        <!-- 项目管理搜索表单 -->
+        <!-- 接口管理搜索表单 -->
         <div class="page-header" style="padding-top: 60px;">
             <div id="navbar" class="navbar-collapse collapse">
-                <form class="navbar-form" method="get" action="/search_project/">
+                <form class="navbar-form" method="get" action="/search_interface/">
                     <div class="form-group">
-                        <input name="project_name" type="text" placeholder="项目名称" class="form-control">
+                        <input name="interface_name" type="text" placeholder="接口名称" class="form-control">
                     </div>
                     <button type="submit" class="btn btn-success">搜索</button>
                 </form>
             </div>
         </div>
 
-        <!-- 项目列表 -->
+        <!-- 接口列表 -->
         <div class="row" style="padding-top: 80px;">
             <div class="col-md-6">
                 <table class="table table-striped">
@@ -48,19 +48,29 @@
                         <tr>
                             <th>id</th>
                             <th>项目名称</th>
-                            <th>归属条线</th>
-                            <th>项目类型</th>
+                            <th>接口编码</th>
+                            <th>接口名称</th>
+                            <th>接口类型</th>
+                            <th>请求类型</th>
+                            <th>传参类型</th>
+                            <th>请求URL</th>
+                            <th>备注</th>
                             <th>创建时间</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for project in projects %}
+                        {% for interface in interfaces %}
                             <tr>
-                                <td>{{ project.id }}</td>
-                                <td>{{ project.project_name }}</td>
-                                <td>{{ project.parent_id }}</td>
-                                <td>{{ project.project_type }}</td>
-                                <td>{{ project.create_time }}</td>
+                                <td>{{ interface.id }}</td>
+                                <td>{{ interface.project }}</td>
+                                <td>{{ interface.interface_code }}</td>
+                                <td>{{ interface.interface_name }}</td>
+                                <td>{{ interface.interface_type }}</td>
+                                <td>{{ interface.request_type }}</td>
+                                <td>{{ interface.byref_type }}</td>
+                                <td>{{ interface.request_url }}</td>
+                                <td>{{ interface.remarks }}</td>
+                                <td>{{ interface.create_time }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
