--- a/templates/project_manage.html
+++ b/templates/project_manage.html
@@ -18,6 +18,7 @@
                         <li class="active"><a href="#">项目管理</a></li>
                         <li><a href="/interface_manage/">接口管理</a></li>
                         <li><a href="/field_manage/">字段管理</a></li>
+                        <li><a href="/public_rule/">公共规则</a></li>
                         <li><a href="/event_manage/">发布会</a></li>
                         <li><a href="/guest_manage/">嘉宾</a></li>
                     </ul>
