增加批次任务功能

--- a/templates/batch_job.html
+++ b/templates/batch_job.html
@@ -3,7 +3,7 @@
         {% load bootstrap3 %}
         {% bootstrap_css %}
         {% bootstrap_javascript %}
-        <title>Project Manage</title>
+        <title>Batch Job</title>
     </head>
 
     <body role="document">
@@ -15,12 +15,12 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">项目管理</a></li>
+                        <li><a href="/project_manage/">项目管理</a></li>
                         <li><a href="/interface_manage/">接口管理</a></li>
                         <li><a href="/field_manage/">字段管理</a></li>
                         <li><a href="/public_rule/">公共规则</a></li>
                         <li><a href="/public_case/">公共用例</a></li>
-                        <li><a href="/batch_job/">批次任务管理</a></li>
+                        <li class="active"><a href="#">批次任务管理</a></li>
                         <li><a href="/event_manage/">发布会</a></li>
                         <li><a href="/guest_manage/">嘉宾</a></li>
                     </ul>
@@ -32,44 +32,62 @@
             </div>
         </nav>
 
-        <!-- 项目管理搜索表单 -->
+        <!-- 批次任务搜索表单 -->
         <div class="page-header" style="padding-top: 60px;">
             <div id="navbar" class="navbar-collapse collapse">
-                <form class="navbar-form" method="get" action="/search_project/">
+                <form class="navbar-form" method="get" action="/search_job/">
                     <div class="form-group">
-                        <input name="project_name" type="text" placeholder="项目名称" class="form-control">
+                        <input name="id" type="text" placeholder="批次编号" class="form-control">
                     </div>
                     <button type="submit" class="btn btn-success">搜索</button>
                 </form>
             </div>
         </div>
 
-        <!-- 项目列表 -->
+        <!-- 批次任务列表 -->
         <div class="row" style="padding-top: 80px;">
             <div class="col-md-6">
                 <table class="table table-striped">
                     <thead>
                         <tr>
                             <th>id</th>
-                            <th>项目名称</th>
-                            <th>归属条线</th>
-                            <th>项目类型</th>
+                            <th>状态</th>
+                            <th>执行开始时间</th>
+                            <th>执行结束时间</th>
+                            <th>执行次数</th>
+                            <th>备注</th>
                             <th>创建时间</th>
                         </tr>
                     </thead>
                     <tbody>
-                        {% for project in projects %}
+                        {% for job in jobs %}
                             <tr>
-                                <td>{{ project.id }}</td>
-                                <td>{{ project.project_name }}</td>
-                                <td>{{ project.parent_id }}</td>
-                                <td>{{ project.project_type }}</td>
-                                <td>{{ project.create_time }}</td>
+                                <td>{{ job.id }}</td>
+                                <td>{{ job.batch_status }}</td>
+                                <td>{{ job.start_time }}</td>
+                                <td>{{ job.finish_time }}</td>
+                                <td>{{ job.execute_frequency }}</td>
+                                <td>{{ job.remarks }}</td>
+                                <th>{{ job.create_time }}</th>
                             </tr>
                         {% endfor %}
                     </tbody>
                 </table>
             </div>
+        </div>
+        <!-- 列表分页器 -->
+        <div class="paginator">
+            <span class="step-links">
+                {% if jobs.has_previous %}
+                    <a href="?page={{ jobs.previous_page_number }}">previous</a>
+                {% endif %}
+                    <span class="current">
+                        Page {{ jobs.number }} of {{ jobs.paginator.num_pages }}.
+                    </span>
+                {% if jobs.has_next %}
+                    <a href="?page={{ jobs.next_page_number }}">next</a>
+                {% endif %}
+            </span>
         </div>
     </body>
 </html>
