--- a/templates/event_manage.html
+++ b/templates/event_manage.html
@@ -20,6 +20,7 @@
                         <li><a href="/field_manage/">字段管理</a></li>
                         <li><a href="/public_rule/">公共规则</a></li>
                         <li><a href="/public_case/">公共用例</a></li>
+                        <li><a href="/batch_job/">批次任务管理</a></li>
                         <li class="active"><a href="#">发布会</a></li>
                         <li><a href="/guest_manage/">嘉宾</a></li>
                     </ul>
