--- a/templates/field_manage.html
+++ b/templates/field_manage.html
@@ -21,6 +21,7 @@
                         <li><a href="/public_rule/">公共规则</a></li>
                         <li><a href="/public_case/">公共用例</a></li>
                         <li><a href="/batch_job/">批次任务管理</a></li>
+                        <li><a href="/batch_case/">批次用例管理</a></li>
                         <li><a href="/event_manage/">发布会</a></li>
                         <li><a href="/guest_manage/">嘉宾</a></li>
                     </ul>
