--- a/templates/public_rule.html
+++ b/templates/public_rule.html
@@ -20,6 +20,8 @@
                         <li><a href="/field_manage/">字段管理</a></li>
                         <li class="active"><a href="#">公共规则</a></li>
                         <li><a href="/public_case/">公共用例</a></li>
+                        <li><a href="/batch_job/">批次任务管理</a></li>
+                        <li><a href="/batch_case/">批次用例管理</a></li>
                         <li><a href="/event_manage/">发布会</a></li>
                         <li><a href="/guest_manage/">嘉宾</a></li>
                     </ul>
