增加服务器管理功能

--- a/templates/event_manage.html
+++ b/templates/event_manage.html
@@ -22,6 +22,7 @@
                         <li><a href="/public_case/">公共用例</a></li>
                         <li><a href="/batch_job/">批次任务管理</a></li>
                         <li><a href="/batch_case/">批次用例管理</a></li>
+                        <li><a href="/server_manage/">服务器管理</a></li>
                         <li class="active"><a href="#">发布会</a></li>
                         <li><a href="/guest_manage/">嘉宾</a></li>
                     </ul>
